抢票任务表单界面优化

--- a/template/index.html
+++ b/template/index.html
@@ -2,36 +2,95 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>12306自助购票系统</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+    <style>
+        input {
+            margin-top: 10px;
+        }
+        input.form-control {
+            margin-top: 0px;
+        }
+    </style>
 </head>
 <body>
 <h1>12306自助购票系统</h1>
-<div>
-    <h2>个人信息</h2>
+<div style="margin: 20px">
     <form action="http://192.168.10.18:9507/index/addTicketTask">
-        12306账号：<input type="text" name="train_username"><br>
-        12306密码：<input type="text" name="train_password"><br>
-        名字：<input type="text" name="my_name"><br>
-        身份证：<input type="text" name="my_card" placeholder="xxxx***********xxx"><br>
-        手机号：<input type="text" name="my_phone" placeholder="xxx****xxxx"><br>
-        用户身份验证密文：<input type="text" name="user_auth"><font color="red">(在checkOrderInfo接口中提取请求参数passengerTicketStr 的 N, 后面的字符串)</font><br>
-        下图验证码答案: <input type="text" name="verify_code" placeholder="英文逗号隔开，例：1,3"><br>
-        <img src="{$imgSrc}" alt="">
-    <h2>列车信息</h2>
-        起始站：<input type="text" name="fromStation"><br>
-        终点站：<input type="text" name="toStation"><br>
-        出发时间：<input type="text" name="train_date" placeholder="XXXX-XX-XX"><br>
-        车次：<input type="text" name="train_num"><br>
-        车票类型：<input type="text" name="train_type"><font color="red">(all 任意车次任意座位 23软卧一等 动卧 28硬卧二等 软座 29硬座 26无座 32商务特等座 30二等座 31一等座 33高级商务)</font><br>
-        座位类型：<input type="text" name="train_seat"><font color="red">(商务座(9),特等座(P),一等座(M),二等座(O),高级软卧(6),软卧(4),硬卧(3),软座(2),硬座(1),无座(1)  // 注意大小写)</font><br>
-    <h2>设备信息</h2>
-        <p style="font-size: 0.5em;"> Cookie信息中附带的设备信息(登陆购票支付等必备)
-            <br>获取方式：登陆12306网站(记住要先登录)，刷新页面F12查看任意XHR请求，从请求的Request Headers中的Cookie提取设备信息</p>
-        RAIL_EXPIRATION: <input type="text" name="rail_expiration"><font color="red">(有效时间)</font><br>
-        RAIL_DEVICEID: <input type="text" name="rail_deviceid"><font color="red">(设备ID)</font><br>
+        <div style="border: 2px gray solid;padding: 5px;width: 800px;">
+            <h2>个人信息</h2>
+            12306账号：<input type="text" name="train_username"><br>
+            12306密码：<input type="text" name="train_password"><br>
+            名字：<input type="text" name="my_name"><br>
+            身份证：<input type="text" name="my_card" placeholder="xxxx***********xxx"><br>
+            手机号：<input type="text" name="my_phone" placeholder="xxx****xxxx"><br>
+            用户身份验证密文：<input type="text" name="user_auth" size="80"><font color="red"><br>(在checkOrderInfo接口中提取请求参数passengerTicketStr 的 N, 后面的字符串)</font><br>
+            下图验证码答案: <input type="text" name="verify_code" placeholder="英文逗号隔开，例：1,3"><br>
+            <img src="{$imgSrc}" alt="">
+        </div>
+        <div style="border: 2px gray solid;padding: 5px;margin-top: 5px;width: 800px;">
+            <h2>列车信息</h2>
+            起始站：<input type="text" name="fromStation"><br>
+            终点站：<input type="text" name="toStation"><br>
+            <label>选择出发时间：</label>
+            <!--指定 date标记-->
+            <div class='input-group date' id='datetimepicker1' style="width: 200px">
+                <input type='text' class="form-control" name="train_date">
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
+            车次：<input type="text" name="train_num"><br>
+            车票类型：
+            <input type="radio" name="train_type" value="all">任意车次座位
+            <input type="radio" name="train_type" value="23">软卧一等 动卧
+            <input type="radio" name="train_type" value="28">硬卧二等 软座
+            <input type="radio" name="train_type" value="29">硬座
+            <input type="radio" name="train_type" value="26">无座
+            <input type="radio" name="train_type" value="32">商务特等座
+            <input type="radio" name="train_type" value="30">二等座
+            <input type="radio" name="train_type" value="31">一等座
+            <input type="radio" name="train_type" value="33">高级商务
+            <br>
+            座位类型：
+            <input type="radio" name="train_seat" value="9">商务座
+            <input type="radio" name="train_seat" value="P">特等座
+            <input type="radio" name="train_seat" value="M">一等座
+            <input type="radio" name="train_seat" value="O">二等座
+            <input type="radio" name="train_seat" value="6">高级软卧
+            <input type="radio" name="train_seat" value="4">软卧
+            <input type="radio" name="train_seat" value="3">硬卧
+            <input type="radio" name="train_seat" value="2">软座
+            <input type="radio" name="train_seat" value="1">硬座
+            <input type="radio" name="train_seat" value="1">无座
+            <br>
+        </div>
+        <div style="border: 2px gray solid;padding: 5px;margin-top: 5px;width: 800px;">
+            <h2>设备信息</h2>
+            <p style="font-size: 0.5em;"> Cookie信息中附带的设备信息(登陆购票支付等必备)
+                <br>获取方式：登陆12306网站(记住要先登录)，刷新页面F12查看任意XHR请求，从请求的Request Headers中的Cookie提取设备信息</p>
+            RAIL_EXPIRATION: <input type="text" name="rail_expiration"><font color="red">(有效时间)</font><br>
+            RAIL_DEVICEID: <input type="text" name="rail_deviceid" size="80"><font color="red">(设备ID)</font><br>
+        </div>
         <input type="submit" value="提交">
     </form>
 </div>
+
+<script>
+    $(function () {
+        $('#datetimepicker1').datetimepicker({
+            format: 'YYYY-MM-DD',
+            locale: moment.locale('zh-cn')
+        });
+    });
+</script>
+
 </body>
 </html>
