--- a/template/index.html
+++ b/template/index.html
@@ -26,28 +26,29 @@
     <form action="http://192.168.10.18:9507/index/addTicketTask">
         <div style="border: 2px gray solid;padding: 5px;width: 800px;">
             <h2>个人信息</h2>
-            12306账号：<input type="text" name="train_username"><br>
-            12306密码：<input type="text" name="train_password"><br>
-            名字：<input type="text" name="my_name"><br>
-            身份证：<input type="text" name="my_card" placeholder="xxxx***********xxx"><br>
-            手机号：<input type="text" name="my_phone" placeholder="xxx****xxxx"><br>
-            用户身份验证密文：<input type="text" name="user_auth" size="80"><font color="red"><br>(在checkOrderInfo接口中提取请求参数passengerTicketStr 的 N, 后面的字符串)</font><br>
-            下图验证码答案: <input type="text" name="verify_code" placeholder="英文逗号隔开，例：1,3"><br>
-            <img src="{$imgSrc}" alt="">
+            12306账号：<input type="text" name="train_username" id="train_username"><br>
+            12306密码：<input type="text" name="train_password" id="train_password"><br>
+            名字：<input type="text" name="my_name" id="my_name"><br>
+            身份证：<input type="text" name="my_card" placeholder="xxxx***********xxx" id="my_card"><br>
+            手机号：<input type="text" name="my_phone" placeholder="xxx****xxxx" id="my_phone"><br>
+            用户身份验证密文：<input type="text" name="user_auth" size="80" id="user_auth"><font color="red"><br>(在checkOrderInfo接口中提取请求参数passengerTicketStr 的 N, 后面的字符串)</font><br>
+            下图验证码答案: <input type="text" name="verify_code" placeholder="英文逗号隔开，例：1,3" id="verify_code"><br>
+            <button id="refresh" type="button">点击刷新验证码</button><br>
+            <img src="{$imgSrc}" alt="" id="captchaImg">
         </div>
         <div style="border: 2px gray solid;padding: 5px;margin-top: 5px;width: 800px;">
             <h2>列车信息</h2>
-            起始站：<input type="text" name="fromStation"><br>
-            终点站：<input type="text" name="toStation"><br>
+            起始站：<input type="text" name="fromStation" id="fromStation"><br>
+            终点站：<input type="text" name="toStation" id="toStation"><br>
             <label>选择出发时间：</label>
             <!--指定 date标记-->
             <div class='input-group date' id='datetimepicker1' style="width: 200px">
-                <input type='text' class="form-control" name="train_date">
+                <input type='text' class="form-control" name="train_date" id="train_date">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span>
                 </span>
             </div>
-            车次：<input type="text" name="train_num"><br>
+            车次：<input type="text" name="train_num" id="train_num"><br>
             车票类型：
             <input type="radio" name="train_type" value="all">任意车次座位
             <input type="radio" name="train_type" value="23">软卧一等 动卧
@@ -76,20 +77,80 @@
             <h2>设备信息</h2>
             <p style="font-size: 0.5em;"> Cookie信息中附带的设备信息(登陆购票支付等必备)
                 <br>获取方式：登陆12306网站(记住要先登录)，刷新页面F12查看任意XHR请求，从请求的Request Headers中的Cookie提取设备信息</p>
-            RAIL_EXPIRATION: <input type="text" name="rail_expiration"><font color="red">(有效时间)</font><br>
-            RAIL_DEVICEID: <input type="text" name="rail_deviceid" size="80"><font color="red">(设备ID)</font><br>
+            RAIL_EXPIRATION: <input type="text" name="rail_expiration" id="rail_expiration"><font color="red">(有效时间)</font><br>
+            RAIL_DEVICEID: <input type="text" name="rail_deviceid" size="80" id="rail_deviceid"><font color="red">(设备ID)</font><br>
         </div>
-        <input type="submit" value="提交">
+        <input type="button" value="提交" id="submitForm">
     </form>
 </div>
 
 <script>
     $(function () {
+        //时间控件
         $('#datetimepicker1').datetimepicker({
             format: 'YYYY-MM-DD',
             locale: moment.locale('zh-cn')
         });
     });
+    $(function () {
+        //ajax提交表单
+        $("#submitForm").click(function () {
+            var train_username = $("#train_username").val();
+            var train_password = $("#train_password").val();
+            var my_name = $("#my_name").val();
+            var my_card = $("#my_card").val();
+            var my_phone = $("#my_phone").val();
+            var user_auth = $("#user_auth").val();
+            var verify_code = $("#verify_code").val();
+            var fromStation = $("#fromStation").val();
+            var toStation = $("#toStation").val();
+            var train_date = $("#train_date").val();
+            var train_num = $("#train_num").val();
+            var train_type = $("input[name='train_type']:checked").val();
+            var train_seat = $("input[name='train_seat']:checked").val();
+            var rail_expiration = $("#rail_expiration").val();
+            var rail_deviceid = $("#rail_deviceid").val();
+            $.post(
+                "http://192.168.10.18:9507/index/addTicketTask", 
+                {
+                    train_username:train_username,
+                    train_password:train_password,
+                    my_name:my_name,
+                    my_card:my_card,
+                    my_phone:my_phone,
+                    user_auth:user_auth,
+                    verify_code:verify_code,
+                    fromStation:fromStation,
+                    toStation:toStation,
+                    train_date:train_date,
+                    train_num:train_num,
+                    train_type:train_type,
+                    train_seat:train_seat,
+                    rail_expiration:rail_expiration,
+                    rail_deviceid:rail_deviceid
+                },
+                function (data, status) {
+                    console.log(data.result.result);
+                    if (data.result.result) {
+                        alert('订单任务添加成功，注意查收邮箱');
+                        location.reload(true);
+                    } else {
+                        alert('添加失败，错误信息：' + data.result.errMsg);
+                    }
+                }
+            );
+        });
+        //刷新验证码图片
+        $("#refresh").click(function () {
+            $.get("http://192.168.10.18:9507/index/refreshCaptcha", function (data, status) {
+                if (data.result.result) {
+                    var imgSrc = data.result.imgSrc;
+                    $("#captchaImg").attr("src", imgSrc);
+                }
+
+            })
+        });
+    })
 </script>
 
 </body>
